--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <h1>Omnifood</h1>
+    <header class="hero-text-box">
+      <h1>Goodbye junk food. Hello super healthy meals.</h1>
+      <a href="#">I’m hungry</a> <a href="#">Show me more</a>
+    </header>
 
     <script src="js/main.js"></script>
   </body>
