--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,11 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <header class="hero-text-box">
-      <h1>Goodbye junk food. Hello super healthy meals.</h1>
-      <a href="#">I’m hungry</a> <a href="#">Show me more</a>
+    <header>
+      <div class="hero-text-box">
+        <h1>Goodbye junk food. Hello super healthy meals.</h1>
+        <a href="#">I’m hungry</a> <a href="#">Show me more</a>
+      </div>
     </header>
 
     <script src="js/main.js"></script>
