--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
         <a class="btn btn-ghost" href="#">Show me more</a>
       </div>
     </header>
+    <section class="features"></section>
 
     <script src="js/main.js"></script>
   </body>
