--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,73 @@
         </div>
       </div>
     </section>
+    <section class="meals">
+      <ul class="meals-showcase">
+        <li>
+          <figure>
+            <img
+              src="images/raster/1.jpg"
+              alt="Korean bibimbap with egg and vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="images/raster/2.jpg"
+              alt="Simple italian pizza with cherry tomatoes"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="images/raster/3.jpg"
+              alt="Chicken breast steak with vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="images/raster/4.jpg" alt="Autumn pumpkin soup" />
+          </figure>
+        </li>
+      </ul>
+      <ul class="meals-showcase">
+        <li>
+          <figure>
+            <img
+              src="images/raster/5.jpg"
+              alt="Paleo beef steak with vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="images/raster/6.jpg"
+              alt="Healthy baguette with egg and vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="images/raster/7.jpg"
+              alt="Burger with cheddar and bacon"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="images/raster/8.jpg"
+              alt="Granola with cherries and strawberries"
+            />
+          </figure>
+        </li>
+      </ul>
+    </section>
 
     <script src="js/main.js"></script>
   </body>
