images  added to meals section.

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
     <section class="meals">
       <ul class="meals-showcase">
         <li>
-          <figure>
+          <figure class="meal-photo">
             <img
               src="images/raster/1.jpg"
               alt="Korean bibimbap with egg and vegetables"
@@ -93,7 +93,7 @@
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="meal-photo">
             <img
               src="images/raster/2.jpg"
               alt="Simple italian pizza with cherry tomatoes"
@@ -101,7 +101,7 @@
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="meal-photo">
             <img
               src="images/raster/3.jpg"
               alt="Chicken breast steak with vegetables"
@@ -109,14 +109,14 @@
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="meal-photo">
             <img src="images/raster/4.jpg" alt="Autumn pumpkin soup" />
           </figure>
         </li>
       </ul>
       <ul class="meals-showcase">
         <li>
-          <figure>
+          <figure class="meal-photo">
             <img
               src="images/raster/5.jpg"
               alt="Paleo beef steak with vegetables"
@@ -124,7 +124,7 @@
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="meal-photo">
             <img
               src="images/raster/6.jpg"
               alt="Healthy baguette with egg and vegetables"
@@ -132,7 +132,7 @@
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="meal-photo">
             <img
               src="images/raster/7.jpg"
               alt="Burger with cheddar and bacon"
@@ -140,7 +140,7 @@
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="meal-photo">
             <img
               src="images/raster/8.jpg"
               alt="Granola with cherries and strawberries"
