styles added to steps section.

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
       </div>
     </section>
     <section class="meals">
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
           <figure class="meal-photo">
             <img
@@ -114,7 +114,7 @@
           </figure>
         </li>
       </ul>
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
           <figure class="meal-photo">
             <img
@@ -152,14 +152,14 @@
     <section class="steps">
       <div class="row"><h2>How it works &mdash; Simple as 1, 2, 3</h2></div>
       <div class="row">
-        <div class="col span-1-of-2">
+        <div class="col span-1-of-2 steps-box">
           <img
             src="images/raster/app-iPhone.png"
             alt="Omnifood app on iPhone"
             class="app-screen"
           />
         </div>
-        <div class="col span-1-of-2">
+        <div class="col span-1-of-2 steps-box">
           <div class="works-step">
             <div>1</div>
             <p>
@@ -181,16 +181,10 @@
             </p>
           </div>
           <a href="#" class="btn-app">
-            <img
-              src="images/vector/download-on-the-App-Store.svg"
-              alt="App Store Button"
-            />
+            <img src="images/vector/app-store.svg" alt="App Store Button" />
           </a>
           <a href="#" class="btn-app">
-            <img
-              src="images/vector/get-it-on-Google-Play.svg"
-              alt="Play Store Button"
-            />
+            <img src="images/vector/google-play.svg" alt="Play Store Button" />
           </a>
         </div>
       </div>
