--- a/src/index.html
+++ b/src/index.html
@@ -180,12 +180,73 @@
               Enjoy your meal after less than 20 minutes. See you the next time!
             </p>
           </div>
-          <a href="#" class="btn-app">
+          <a href="https://itunes.apple.com/" target="_blank" class="btn-app">
             <img src="images/vector/app-store.svg" alt="App Store Button" />
           </a>
-          <a href="#" class="btn-app">
+          <a href="https://play.google.com/" target="_blank" class="btn-app">
             <img src="images/vector/google-play.svg" alt="Play Store Button" />
           </a>
+        </div>
+      </div>
+    </section>
+    <section class="cities">
+      <div class="row"><h2>We're currently in these cities</h2></div>
+      <div class="row">
+        <div class="col span-1-of-4">
+          <img src="images/raster/lisbon-3.jpg" alt="Lisbon" />
+          <h3>Lisbon</h3>
+          <div class="city-feature">
+            <i class="ion-ios-person"></i> 1600+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="ion-ios-star"></i> 60+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="ion-social-twitter"></i
+            ><a href="https://twitter.com/" target="_blank">@omnifood_lx</a>
+          </div>
+        </div>
+        <div class="col span-1-of-4">
+          <img src="images/raster/san-francisco.jpg" alt="San Francisco" />
+          <h3>San Francisco</h3>
+          <div class="city-feature">
+            <i class="ion-ios-person"></i> 3700+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="ion-ios-star"></i> 160+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="ion-social-twitter"></i
+            ><a href="https://twitter.com/" target="_blank">@omnifood_sf</a>
+          </div>
+        </div>
+        <div class="col span-1-of-4">
+          <img src="images/raster/berlin.jpg" alt="Lisbon" />
+          <h3>Berlin</h3>
+          <div class="city-feature">
+            <i class="ion-ios-person"></i> 2300+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="ion-ios-star"></i> 110+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="ion-social-twitter"></i
+            ><a href="https://twitter.com/" target="_blank">@omnifood_berlin</a>
+          </div>
+        </div>
+        <div class="col span-1-of-4">
+          <img src="images/raster/london.jpg" alt="Lisbon" />
+          <h3>London</h3>
+          <div class="city-feature">
+            <i class="ion-ios-person"></i> 1200+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="ion-ios-star"></i> 50+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="ion-social-twitter"></i
+            ><a href="https://twitter.com/" target="_blank">@omnifood_london</a>
+          </div>
         </div>
       </div>
     </section>
