--- a/src/index.html
+++ b/src/index.html
@@ -192,59 +192,59 @@
     <section class="cities">
       <div class="row"><h2>We're currently in these cities</h2></div>
       <div class="row">
-        <div class="col span-1-of-4">
+        <div class="col span-1-of-4 box">
           <img src="images/raster/lisbon-3.jpg" alt="Lisbon" />
           <h3>Lisbon</h3>
           <div class="city-feature">
-            <i class="ion-ios-person"></i> 1600+ happy eaters
+            <i class="ion-ios-person icon-small"></i> 1600+ happy eaters
           </div>
           <div class="city-feature">
-            <i class="ion-ios-star"></i> 60+ top chefs
+            <i class="ion-ios-star icon-small"></i> 60+ top chefs
           </div>
           <div class="city-feature">
-            <i class="ion-social-twitter"></i
+            <i class="ion-social-twitter icon-small"></i
             ><a href="https://twitter.com/" target="_blank">@omnifood_lx</a>
           </div>
         </div>
-        <div class="col span-1-of-4">
+        <div class="col span-1-of-4 box">
           <img src="images/raster/san-francisco.jpg" alt="San Francisco" />
           <h3>San Francisco</h3>
           <div class="city-feature">
-            <i class="ion-ios-person"></i> 3700+ happy eaters
+            <i class="ion-ios-person icon-small"></i> 3700+ happy eaters
           </div>
           <div class="city-feature">
-            <i class="ion-ios-star"></i> 160+ top chefs
+            <i class="ion-ios-star icon-small"></i> 160+ top chefs
           </div>
           <div class="city-feature">
-            <i class="ion-social-twitter"></i
+            <i class="ion-social-twitter icon-small"></i
             ><a href="https://twitter.com/" target="_blank">@omnifood_sf</a>
           </div>
         </div>
-        <div class="col span-1-of-4">
-          <img src="images/raster/berlin.jpg" alt="Lisbon" />
+        <div class="col span-1-of-4 box">
+          <img src="images/raster/berlin.jpg" alt="Berlin" />
           <h3>Berlin</h3>
           <div class="city-feature">
-            <i class="ion-ios-person"></i> 2300+ happy eaters
+            <i class="ion-ios-person icon-small"></i> 2300+ happy eaters
           </div>
           <div class="city-feature">
-            <i class="ion-ios-star"></i> 110+ top chefs
+            <i class="ion-ios-star icon-small"></i> 110+ top chefs
           </div>
           <div class="city-feature">
-            <i class="ion-social-twitter"></i
+            <i class="ion-social-twitter icon-small"></i
             ><a href="https://twitter.com/" target="_blank">@omnifood_berlin</a>
           </div>
         </div>
-        <div class="col span-1-of-4">
-          <img src="images/raster/london.jpg" alt="Lisbon" />
+        <div class="col span-1-of-4 box">
+          <img src="images/raster/london.jpg" alt="London" />
           <h3>London</h3>
           <div class="city-feature">
-            <i class="ion-ios-person"></i> 1200+ happy eaters
+            <i class="ion-ios-person icon-small"></i> 1200+ happy eaters
           </div>
           <div class="city-feature">
-            <i class="ion-ios-star"></i> 50+ top chefs
+            <i class="ion-ios-star icon-small"></i> 50+ top chefs
           </div>
           <div class="city-feature">
-            <i class="ion-social-twitter"></i
+            <i class="ion-social-twitter icon-small"></i
             ><a href="https://twitter.com/" target="_blank">@omnifood_london</a>
           </div>
         </div>
