--- a/src/index.html
+++ b/src/index.html
@@ -300,10 +300,21 @@
             </div>
             <div>
               <ul>
-                <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal every day</li>
-                <li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
-                <li><i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7</li>
-                <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
+                <li>
+                  <i class="ion-ios-checkmark-empty icon-small"></i>1 meal every
+                  day
+                </li>
+                <li>
+                  <i class="ion-ios-checkmark-empty icon-small"></i>Access to
+                  newest creations
+                </li>
+                <li>
+                  <i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7
+                </li>
+                <li>
+                  <i class="ion-ios-checkmark-empty icon-small"></i>Free
+                  delivery
+                </li>
               </ul>
             </div>
             <div><a href="#" class="btn btn-full">Sign up Now</a></div>
@@ -318,10 +329,21 @@
             </div>
             <div>
               <ul>
-                <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal 10 days/month</li>
-                <li><i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7</li>
-                <li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
-                <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
+                <li>
+                  <i class="ion-ios-checkmark-empty icon-small"></i>1 meal 10
+                  days/month
+                </li>
+                <li>
+                  <i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7
+                </li>
+                <li>
+                  <i class="ion-ios-checkmark-empty icon-small"></i>Access to
+                  newest creations
+                </li>
+                <li>
+                  <i class="ion-ios-checkmark-empty icon-small"></i>Free
+                  delivery
+                </li>
               </ul>
             </div>
             <div><a href="#" class="btn btn-ghost">Sign up Now</a></div>
@@ -336,10 +358,18 @@
             </div>
             <div>
               <ul>
-                <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal</li>
-                <li><i class="ion-ios-checkmark-empty icon-small"></i>Order from 8 am to 12 pm</li>
+                <li>
+                  <i class="ion-ios-checkmark-empty icon-small"></i>1 meal
+                </li>
+                <li>
+                  <i class="ion-ios-checkmark-empty icon-small"></i>Order from 8
+                  am to 12 pm
+                </li>
                 <li><i class="ion-ios-close-empty icon-small"></i></li>
-                <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
+                <li>
+                  <i class="ion-ios-checkmark-empty icon-small"></i>Free
+                  delivery
+                </li>
               </ul>
             </div>
             <div><a href="#" class="btn btn-ghost">Sign up Now</a></div>
@@ -347,7 +377,70 @@
         </div>
       </div>
     </section>
-
+    <section class="form">
+      <div class="row"><h2>We're happy to hear from you</h2></div>
+      <div class="row">
+        <form class="contact-form" onsubmit="redirect()">
+          <div class="row">
+            <div class="col span-1-of-3"><label for="name">Name</label></div>
+            <div class="col span-2-of-3">
+              <input
+                type="text"
+                name="name"
+                id="name"
+                placeholder="Your name"
+                required
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3"><label for="email">Email</label></div>
+            <div class="col span-2-of-3">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Your email"
+                required
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3">
+              <label for="find-us">How did you find us?</label>
+            </div>
+            <div class="col span-2-of-3">
+              <select name="find-us" id="find-us" required>
+                <option></option>
+                <option value="friends">Friends</option>
+                <option value="search">Search engine</option>
+                <option value="ad">Advertisement</option>
+                <option value="other">Other</option>
+              </select>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3"><label>Newsletter?</label></div>
+            <div class="col span-2-of-3">
+              <input type="checkbox" name="news" id="news" checked /> Yes,
+              please
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3"><label>Drop us a line</label></div>
+            <div class="col span-2-of-3">
+              <textarea name="message" placeholder="Your message"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3"><label>&nbsp;</label></div>
+            <div class="col span-2-of-3">
+              <input type="submit" value="Send it!" />
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
