--- a/src/index.html
+++ b/src/index.html
@@ -422,8 +422,11 @@
           <div class="row">
             <div class="col span-1-of-3"><label>Newsletter?</label></div>
             <div class="col span-2-of-3">
-              <input type="checkbox" name="news" id="news" checked /> Yes,
-              please
+                <div class="form-group">
+                    <input type="checkbox" id="html">
+                    <label for="html"></label>
+                    Yes, please
+                  </div>
             </div>
           </div>
           <div class="row">
@@ -440,7 +443,9 @@
           </div>
         </form>
       </div>
+      
     </section>
+     
     <script src="js/main.js"></script>
   </body>
 </html>
