--- a/src/index.html
+++ b/src/index.html
@@ -380,7 +380,7 @@
     <section class="form">
       <div class="row"><h2>We're happy to hear from you</h2></div>
       <div class="row">
-        <form class="contact-form" onsubmit="redirect()">
+        <form class="contact-form" autocomplete="off" onsubmit="redirect()">
           <div class="row">
             <div class="col span-1-of-3"><label for="name">Name</label></div>
             <div class="col span-2-of-3">
