--- a/src/index.html
+++ b/src/index.html
@@ -422,11 +422,10 @@
           <div class="row">
             <div class="col span-1-of-3"><label>Newsletter?</label></div>
             <div class="col span-2-of-3">
-                <div class="form-group">
-                    <input type="checkbox" id="html">
-                    <label for="html"></label>
-                    Yes, please
-                  </div>
+              <div class="form-group">
+                <input type="checkbox" id="html" />
+                <label for="html"></label> Yes, please
+              </div>
             </div>
           </div>
           <div class="row">
@@ -443,9 +442,44 @@
           </div>
         </form>
       </div>
-      
     </section>
-     
+    <footer>
+      <div class="row">
+        <div class="col span-1-of-2">
+          <ul class="footer-nav">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">iOS App</a></li>
+            <li><a href="#">Android App</a></li>
+          </ul>
+        </div>
+        <div class="col span-1-of-2">
+          <ul class="social-links">
+            <li>
+              <a href="#"><i class="ion-social-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="ion-social-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="ion-social-googleplus"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="ion-social-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <p>
+          Copyright &copy; 2018 by Omnifood. All rights reserved.
+        </p>
+      </div>
+    </footer>
+
     <script src="js/main.js"></script>
   </body>
 </html>
+
+Also include links to facebook, twitter, google+ and Instagram accounts.
