--- a/src/index.html
+++ b/src/index.html
@@ -380,7 +380,7 @@
     <section class="form">
       <div class="row"><h2>We're happy to hear from you</h2></div>
       <div class="row">
-        <form class="contact-form" autocomplete="off" onsubmit="redirect()" novalidate>
+        <form class="contact-form" autocomplete="off" onsubmit="redirect()">
           <div class="row">
             <div class="col span-1-of-3"><label for="name">Name</label></div>
             <div class="col span-2-of-3">
@@ -477,11 +477,7 @@
       </div>
     </footer>
 
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
     <script src="js/main.js"></script>
   </body>
