--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
+      rel="icon"
+      type="image/png"
+      href="images/raster/favicon-16x16.png"
+      sizes="16x16"
+    />
+
+    <link
       href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
       rel="stylesheet"
     />
@@ -411,7 +418,12 @@
               <label for="find-us">How did you find us?</label>
             </div>
             <div class="col span-2-of-3">
-              <select name="find-us" id="find-us" title="Please choose one option." required>
+              <select
+                name="find-us"
+                id="find-us"
+                title="Please choose one option."
+                required
+              >
                 <option></option>
                 <option value="friends">Friends</option>
                 <option value="search">Search engine</option>
@@ -424,7 +436,7 @@
             <div class="col span-1-of-3"><label>Newsletter?</label></div>
             <div class="col span-2-of-3">
               <div class="form-group">
-                <input type="checkbox" id="news" checked/>
+                <input type="checkbox" id="news" checked />
                 <label for="news"></label> Yes, please
               </div>
             </div>
@@ -432,7 +444,13 @@
           <div class="row">
             <div class="col span-1-of-3"><label>Drop us a line</label></div>
             <div class="col span-2-of-3">
-              <textarea name="message" placeholder="Your message" title="Please write your message." maxlength="150" required></textarea>
+              <textarea
+                name="message"
+                placeholder="Your message"
+                title="Please write your message."
+                maxlength="150"
+                required
+              ></textarea>
             </div>
           </div>
           <div class="row">
@@ -477,7 +495,11 @@
       </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
     <script src="js/main.js"></script>
   </body>
