set up internal links.

--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,10 @@
             alt="Omnifood logo"
           />
           <ul class="main-nav">
-            <li><a href="#">Food delivery</a></li>
-            <li><a href="#">How it works</a></li>
-            <li><a href="#">Our cities</a></li>
-            <li><a href="#">Sign up</a></li>
+            <li><a href="#features">Food delivery</a></li>
+            <li><a href="#steps">How it works</a></li>
+            <li><a href="#cities">Our cities</a></li>
+            <li><a href="#plans">Sign up</a></li>
           </ul>
         </div>
       </nav>
@@ -41,7 +41,7 @@
         <a class="btn btn-ghost" href="#">Show me more</a>
       </div>
     </header>
-    <section class="features">
+    <section class="features" id="features">
       <div class="row">
         <h2>Get food fast &mdash; not fast food.</h2>
         <p class="long-copy">
@@ -156,7 +156,7 @@
         </li>
       </ul>
     </section>
-    <section class="steps">
+    <section class="steps" id="steps">
       <div class="row"><h2>How it works &mdash; Simple as 1, 2, 3</h2></div>
       <div class="row">
         <div class="col span-1-of-2 steps-box">
@@ -196,7 +196,7 @@
         </div>
       </div>
     </section>
-    <section class="cities">
+    <section class="cities" id="cities">
       <div class="row"><h2>We're currently in these cities</h2></div>
       <div class="row">
         <div class="col span-1-of-4 box">
@@ -295,7 +295,7 @@
         </div>
       </div>
     </section>
-    <section class="plans">
+    <section class="plans" id="plans">
       <div class="row"><h2>Start eating healthy today</h2></div>
       <div class="row">
         <div class="col span-1-of-3">
