some hover effects added.

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       </nav>
       <div class="hero-text-box">
         <h1>Goodbye junk food. <br />Hello super healthy meals.</h1>
-        <a class="btn btn-full" href="#">I’m hungry</a>
+        <a class="btn btn-ghost" href="#">I’m hungry</a>
         <a class="btn btn-ghost" href="#">Show me more</a>
       </div>
     </header>
@@ -324,7 +324,7 @@
                 </li>
               </ul>
             </div>
-            <div><a href="#" class="btn btn-full">Sign up Now</a></div>
+            <div><a href="#" class="btn btn-ghost">Sign up Now</a></div>
           </div>
         </div>
         <div class="col span-1-of-3">
@@ -495,6 +495,7 @@
       </div>
     </footer>
 
+    
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
