--- a/src/index.html
+++ b/src/index.html
@@ -476,16 +476,16 @@
         <div class="col span-1-of-2">
           <ul class="social-links">
             <li>
-              <a href="#"><i class="ion-social-facebook"></i></a>
+              <a href="https://facebook.com" target="_blank"><i class="ion-social-facebook"></i></a>
             </li>
             <li>
-              <a href="#"><i class="ion-social-twitter"></i></a>
+              <a href="https://twitter.com" target="_blank"><i class="ion-social-twitter"></i></a>
             </li>
             <li>
-              <a href="#"><i class="ion-social-googleplus"></i></a>
+              <a href="https://plus.google.com" target="_blank"><i class="ion-social-googleplus"></i></a>
             </li>
             <li>
-              <a href="#"><i class="ion-social-instagram"></i></a>
+              <a href="https://www.instagram.com" target="_blank"><i class="ion-social-instagram"></i></a>
             </li>
           </ul>
         </div>
@@ -493,9 +493,17 @@
       <div class="row">
         <p>Copyright &copy; 2018 by Omnifood. All rights reserved.</p>
       </div>
+      <a href="tel:+380635676242">
+        <div class="container">
+          <div class="back-circle"></div>
+          <div class="button"></div>
+          <div class="front-circle"></div>
+          <i class="ion-ios-telephone"></i>
+        </div>
+      </a>
+      
     </footer>
-
-    
+   
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
