sticky navigation added.

--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,18 @@
     <header>
       <nav>
         <div class="row">
-          <img
-            class="logo"
-            src="images/vector/logo-white.svg"
-            alt="Omnifood logo"
-          />
+            <img
+              class="logo"
+              src="images/vector/logo-white.svg"
+              alt="logo white"
+            />
+          <a href="#">
+            <img
+              class="logo-black"
+              src="images/vector/logo.svg"
+              alt="logo-black"
+            />
+          </a>
           <ul class="main-nav">
             <li><a href="#features">Food delivery</a></li>
             <li><a href="#steps">How it works</a></li>
@@ -37,8 +44,8 @@
       </nav>
       <div class="hero-text-box">
         <h1>Goodbye junk food. <br />Hello super healthy meals.</h1>
-        <a class="btn btn-ghost" href="#">I’m hungry</a>
-        <a class="btn btn-ghost" href="#">Show me more</a>
+        <a class="btn btn-full" href="#plans">I’m hungry</a>
+        <a class="btn btn-ghost" href="#features">Show me more</a>
       </div>
     </header>
     <section class="features" id="features">
@@ -476,16 +483,24 @@
         <div class="col span-1-of-2">
           <ul class="social-links">
             <li>
-              <a href="https://facebook.com" target="_blank"><i class="ion-social-facebook"></i></a>
+              <a href="https://facebook.com" target="_blank"
+                ><i class="ion-social-facebook"></i
+              ></a>
             </li>
             <li>
-              <a href="https://twitter.com" target="_blank"><i class="ion-social-twitter"></i></a>
+              <a href="https://twitter.com" target="_blank"
+                ><i class="ion-social-twitter"></i
+              ></a>
             </li>
             <li>
-              <a href="https://plus.google.com" target="_blank"><i class="ion-social-googleplus"></i></a>
+              <a href="https://plus.google.com" target="_blank"
+                ><i class="ion-social-googleplus"></i
+              ></a>
             </li>
             <li>
-              <a href="https://www.instagram.com" target="_blank"><i class="ion-social-instagram"></i></a>
+              <a href="https://www.instagram.com" target="_blank"
+                ><i class="ion-social-instagram"></i
+              ></a>
             </li>
           </ul>
         </div>
@@ -501,15 +516,15 @@
           <i class="ion-ios-telephone"></i>
         </div>
       </a>
-      
     </footer>
-   
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
