--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
           we’re really good at it, we promise!
         </p>
       </div>
-      <div class="row">
+      <div class="row js--wp-1">
         <div class="col span-1-of-4 box">
           <i class="ion-ios-infinite-outline icon-big"></i>
           <h3>Up to 365 days/year</h3>
@@ -170,7 +170,7 @@
           <img
             src="images/raster/app-iPhone.png"
             alt="Omnifood app on iPhone"
-            class="app-screen"
+            class="app-screen js--wp-2"
           />
         </div>
         <div class="col span-1-of-2 steps-box">
@@ -205,7 +205,7 @@
     </section>
     <section class="cities" id="cities">
       <div class="row"><h2>We're currently in these cities</h2></div>
-      <div class="row">
+      <div class="row js--wp-3">
         <div class="col span-1-of-4 box">
           <img src="images/raster/lisbon-3.jpg" alt="Lisbon" />
           <h3>Lisbon</h3>
@@ -306,7 +306,7 @@
       <div class="row"><h2>Start eating healthy today</h2></div>
       <div class="row">
         <div class="col span-1-of-3">
-          <div class="plan-box">
+          <div class="plan-box js--wp-4">
             <div>
               <h3>Premium</h3>
               <p class="plan-price">399$ <span>/ month</span></p>
