mobile navigation made.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
       href="images/raster/favicon-16x16.png"
       sizes="16x16"
     />
-
     <link
       href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
       rel="stylesheet"
@@ -40,6 +39,7 @@
             <li><a href="#cities">Our cities</a></li>
             <li><a href="#plans">Sign up</a></li>
           </ul>
+          <a class="mobile-nav-icon"><i class="ion-navicon-round"></i></a>
         </div>
       </nav>
       <div class="hero-text-box">
