changing cdn link for ionic framework.

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       sizes="16x16"
     />
     <link
-      href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/bundle.css" />
