update to index.

--- a/src/index.html
+++ b/src/index.html
@@ -21,17 +21,9 @@
     <header>
       <nav>
         <div class="row">
-            <img
-              class="logo"
-              src="images/vector/logo-white.svg"
-              alt="logo white"
-            />
+            <img class="logo" src="images/vector/logo-white.svg" alt="logo white"/>
           <a href="#">
-            <img
-              class="logo-black"
-              src="images/vector/logo.svg"
-              alt="logo-black"
-            />
+            <img  class="logo-black"  src="images/vector/logo.svg" alt="logo-black"/>
           </a>
           <ul class="main-nav">
             <li><a href="#features">Food delivery</a></li>
