--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="Omnifood is a premium food delivery service with the mission to bring affordable and healthy meals to as many people as possible."
+    />
     <link
       rel="icon"
       type="image/png"
@@ -423,9 +427,9 @@
                 title="Please choose one option."
                 required
               >
-                <option></option>
+                <option value="">Please Select</option>
                 <option value="friends">Friends</option>
-                <option value="search">Search engine</option>
+                <option value="search">Search Engine</option>
                 <option value="ad">Advertisement</option>
                 <option value="other">Other</option>
               </select>
